--- a/thefractalspace/templates/fractals/index.html
+++ b/thefractalspace/templates/fractals/index.html
@@ -1,72 +1,30 @@
-{% extends "layouts/base.html" %}
-{% from "macros/macros.html" import fractal, navbar, icon %}
+{% extends "layouts/regular.html" %}
+{% from "macros/macros.html" import fractal, navbar %}
 
-{% block body %}
-    <div class="container--index">
-        <nav class="top_bar separate_two">
-            <a href="{{ url_for("home") }}" class="bar__title hitbox">The Fractal Space - Beta</a>
-            {{ navbar() }}
-        </nav>
+{% block content %}
+    <section class="generate">
+        <h1 class="generate__title hitbox">The Fractal Space</h1>
+        <form action="{{ url("fractal") }}" method="get">
 
-        <div class="container">
+            <input aria-label="Fractal Seed"
+                   name="seed"
+                   type="text"
+                   placeholder="Enter anything to generate a fractal..."
+                   class="generate_input hitbox">
+        </form>
+    </section>
 
-            {{ fractal(seed, True, "fractal", "rounded") }}
+    <p class="hitbox">Please be gentle with our server and don't generate a thousand fractals ;)</p>
 
-            <aside>
-                <div>
-                    <h1 class="aside__title">{{ title }}</h1>
-                    {% if date %}
-                        <time datetime="d-m-Y" class="aside__subtitle">{{ date.strftime("%d %b %Y") }}</time>
-                    {% else %}
-                        <h2 class="aside__subtitle">{{ subtitle }}</h2>
-                    {% endif %}
+    <canvas id="bubbles-canvas"></canvas>
+    <canvas id="hidden-canvas"></canvas>
 
-                    <ol class="aside__spec">
-                        {% for info in infos %}
-                            <li>
-                                {% if info.hint %}
-                                    <abbr title="{{ info.hint }}">
-                                        <span class="spec__label">{{ info.label }}</span>
-                                    </abbr>
-                                {% else %}
-                                    <span class="spec__label">{{ info.label }}</span>
-                                {% endif %}
-                                <span>{{ info.value }}</span>
-                            </li>
-                        {% endfor %}
+    <script src="{{ static("bubbles.js") }}"></script>
+    <script async defer>
+        window.addEventListener("load", () => {
+            const qte = window.innerWidth > 640 ? 30 : 10
+            new Animation(qte, "bubbles-canvas").start()
+        })
+    </script>
 
-                        <li>
-                            <span class="spec__label">Gradient</span>
-                            <span class="gradient-container">
-                                {% for color in gradient %}
-                                    <div class="color-rect" style="background: {{ color }}"></div>
-                                {% endfor %}
-                            </span>
-                        </li>
-                    </ol>
-
-                    <div class="download">
-                        <a href="{{ url_for("img", seed=seed, size=1920) }}" class="download__button" download>
-                            {{ icon("download") }} .png</a>
-                        <a href="{{ url_for("yaml_src", seed=seed) }}" class="download__button">
-                            {{ icon("download") }} .yaml</a>
-                    </div>
-                </div>
-
-                {% if date %}
-                    <footer class="footer--index separate_two">
-                        <a class="flex--center" href="{{ url_for("daily_fractal", date=date-one_day) }}">
-                            {{ icon("left-arrow") }} Previous
-                        </a>
-                        <a class="flex--center" href="{{ url_for("daily_fractal", date=date+one_day) }}">
-                            Next {{ icon("right-arrow") }}
-                        </a>
-                    </footer>
-                {% endif %}
-
-            </aside>
-        </div>
-
-
-    </div>
 {% endblock %}
