--- a/thefractalspace/templates/fractals/index.html
+++ b/thefractalspace/templates/fractals/index.html
@@ -4,7 +4,7 @@
 {% block content %}
     <section class="generate">
         <h1 class="generate__title hitbox">The Fractal Space</h1>
-        <form action="{{ url("fractal") }}" method="get">
+        <form action="{{ url("about") }}" method="get">
 
             <input aria-label="Fractal Seed"
                    name="seed"
